@@ -1,5 +1,6 @@
 package org.jabref.gui.preferences.preview;
 
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -26,20 +27,22 @@ import javafx.scene.input.TransferMode;
 
 import org.jabref.gui.DialogService;
 import org.jabref.gui.DragAndDropDataFormats;
-import org.jabref.gui.Globals;
 import org.jabref.gui.StateManager;
 import org.jabref.gui.preferences.PreferenceTabViewModel;
 import org.jabref.gui.util.BackgroundTask;
 import org.jabref.gui.util.CustomLocalDragboard;
 import org.jabref.gui.util.NoSelectionModel;
 import org.jabref.gui.util.TaskExecutor;
+import org.jabref.logic.bst.BstPreviewLayout;
 import org.jabref.logic.citationstyle.CitationStyle;
 import org.jabref.logic.citationstyle.CitationStylePreviewLayout;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.layout.TextBasedPreviewLayout;
 import org.jabref.logic.preview.PreviewLayout;
+import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.preferences.PreviewPreferences;
 
+import com.airhacks.afterburner.injection.Injector;
 import de.saxsys.mvvmfx.utils.validation.FunctionBasedValidator;
 import de.saxsys.mvvmfx.utils.validation.ValidationMessage;
 import de.saxsys.mvvmfx.utils.validation.ValidationStatus;
@@ -52,11 +55,11 @@ import org.slf4j.LoggerFactory;
 /**
  * This class is Preferences -> Entry Preview tab model
  * <p>
- *     {@link PreviewTab} is the controller of Entry Preview tab
+ * {@link PreviewTab} is the controller of Entry Preview tab
  * </p>
  *
  * @see PreviewTab
- * */
+ */
 public class PreviewTabViewModel implements PreferenceTabViewModel {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(PreviewTabViewModel.class);
@@ -69,6 +72,8 @@ public class PreviewTabViewModel implements PreferenceTabViewModel {
     private final FilteredList<PreviewLayout> filteredAvailableLayouts = new FilteredList<>(this.availableListProperty());
     private final ListProperty<PreviewLayout> chosenListProperty = new SimpleListProperty<>(FXCollections.observableArrayList());
     private final ObjectProperty<MultipleSelectionModel<PreviewLayout>> chosenSelectionModelProperty = new SimpleObjectProperty<>(new NoSelectionModel<>());
+
+    private final ListProperty<Path> bstStylesPaths = new SimpleListProperty<>(FXCollections.observableArrayList());
 
     private final BooleanProperty selectedIsEditableProperty = new SimpleBooleanProperty(false);
     private final ObjectProperty<PreviewLayout> selectedLayoutProperty = new SimpleObjectProperty<>();
@@ -103,10 +108,10 @@ public class PreviewTabViewModel implements PreferenceTabViewModel {
                 chosenListProperty,
                 input -> !chosenListProperty.getValue().isEmpty(),
                 ValidationMessage.error("%s > %s %n %n %s".formatted(
-                        Localization.lang("Entry preview"),
-                        Localization.lang("Selected"),
-                        Localization.lang("Selected Layouts can not be empty")
-                )
+                                Localization.lang("Entry preview"),
+                                Localization.lang("Selected"),
+                                Localization.lang("Selected Layouts can not be empty")
+                        )
                 )
         );
     }
@@ -123,9 +128,11 @@ public class PreviewTabViewModel implements PreferenceTabViewModel {
             availableListProperty.getValue().add(previewPreferences.getCustomPreviewLayout());
         }
 
+        BibEntryTypesManager entryTypesManager = Injector.instantiateModelOrService(BibEntryTypesManager.class);
+
         BackgroundTask.wrap(CitationStyle::discoverCitationStyles)
                       .onSuccess(styles -> styles.stream()
-                                                 .map(style -> new CitationStylePreviewLayout(style, Globals.entryTypesManager))
+                                                 .map(style -> new CitationStylePreviewLayout(style, entryTypesManager))
                                                  .filter(style -> chosenListProperty.getValue().filtered(item ->
                                                          item.getName().equals(style.getName())).isEmpty())
                                                  .sorted(Comparator.comparing(PreviewLayout::getName))
@@ -135,6 +142,12 @@ public class PreviewTabViewModel implements PreferenceTabViewModel {
                           dialogService.showErrorDialogAndWait(Localization.lang("Error adding discovered CitationStyles"), ex);
                       })
                       .executeWith(taskExecutor);
+        bstStylesPaths.clear();
+        bstStylesPaths.addAll(previewPreferences.getBstPreviewLayoutPaths());
+        bstStylesPaths.forEach(path -> {
+            BstPreviewLayout layout = new BstPreviewLayout(path);
+            availableListProperty.add(layout);
+        });
     }
 
     public void setPreviewLayout(PreviewLayout selectedLayout) {
@@ -153,13 +166,13 @@ public class PreviewTabViewModel implements PreferenceTabViewModel {
                     Localization.lang("Parsing error") + ": " + Localization.lang("illegal backslash expression"), exception);
         }
 
-        if (selectedLayout instanceof TextBasedPreviewLayout layout) {
-            sourceTextProperty.setValue(layout.getText().replace("__NEWLINE__", "\n"));
-            selectedIsEditableProperty.setValue(true);
-        } else {
-            sourceTextProperty.setValue(((CitationStylePreviewLayout) selectedLayout).getSource());
-            selectedIsEditableProperty.setValue(false);
-        }
+        boolean isEditingAllowed = selectedLayout instanceof TextBasedPreviewLayout;
+        setContentForPreview(selectedLayout.getText(), isEditingAllowed);
+    }
+
+    private void setContentForPreview(String text, boolean editable) {
+        sourceTextProperty.setValue(text);
+        selectedIsEditableProperty.setValue(editable);
     }
 
     public void refreshPreview() {
@@ -194,10 +207,11 @@ public class PreviewTabViewModel implements PreferenceTabViewModel {
         previewPreferences.setShowPreviewAsExtraTab(showAsExtraTabProperty.getValue());
         previewPreferences.setShowPreviewEntryTableTooltip(showPreviewInEntryTableTooltip.getValue());
         previewPreferences.setCustomPreviewLayout((TextBasedPreviewLayout) customLayout);
+        previewPreferences.setBstPreviewLayoutPaths(bstStylesPaths);
 
         if (!chosenSelectionModelProperty.getValue().getSelectedItems().isEmpty()) {
             previewPreferences.setLayoutCyclePosition(chosenListProperty.getValue().indexOf(
-                    chosenSelectionModelProperty.getValue().getSelectedItems().get(0)));
+                    chosenSelectionModelProperty.getValue().getSelectedItems().getFirst()));
         }
     }
 
@@ -482,5 +496,12 @@ public class PreviewTabViewModel implements PreferenceTabViewModel {
 
     public StringProperty sourceTextProperty() {
         return sourceTextProperty;
+    }
+
+    public void addBstStyle(Path bstFile) {
+        BstPreviewLayout bstPreviewLayout = new BstPreviewLayout(bstFile);
+        bstStylesPaths.add(bstFile);
+        availableListProperty().add(bstPreviewLayout);
+        chosenListProperty().add(bstPreviewLayout);
     }
 }
